tests/reject/tab_mix.ty
# Mixed indentation (space then tab) in one line -- must be rejected.
fn main():
 	println("mixed")
